# trapper-client

./: .readthedocs.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
docs/source/: conf.py  index.rst  modules.rst
src/trapper_client/: APIClientBase.py  APIQuery.py  Reports.py  Schemas.py  TrapperAPIComponent.py  TrapperClient.py  __init__.py
src/trapper_client/components/: ClassificationProjectsComponent.py  ClassificatorsComponent.py  CollectionsComponent.py  DeploymentsComponent.py  LocationsComponent.py  MediaComponent.py  ObservationsComponent.py  PackageComponent.py  ResearchProjectsComponent.py  ResourcesComponent.py
src/trapper_client/ui/typer/: app.py
src/trapper_client/ui/typer/commands/: classification_projects.py  deployments.py  media.py  observations.py  resources.py
tests/: conftest.py  env.example  helpers.py  test_aiobservations.py  test_aiobservations_results.py  test_classificators.py  test_collections.py  test_cprojects.py  test_deployments.py  test_locations.py  test_media.py  test_observations.py  test_observations_results.py  test_packages.py  test_resources.py  test_rprojects.py  test_userobservations.py
trapper_client/: APIClientBase.py  ClassificatorsComponent.py  CollectionsComponent.py  DeploymentsComponent.py  LocationsComponent.py  ResourcesComponent.py  Schemas.py  TrapperAPIComponent.py  TrapperClient.py
trapper_client/ui/typer/: TyperUtils.py  app.py
trapper_client/ui/typer/commands/: collections.py  locations.py  media.py  observations.py  research_projects.py
trapper_client/ui/typer/locales/en/LC_MESSAGES/: messages.po
utils/: i18n.py  install_python_poetry.ps  sphinx.py
(+1 files in other folders)
