[tool.poetry]
name = "trapper-client"
version = "0.1.0"
description = "Python wrapper for Trapper API"
authors = ["ijfviana <ijfviana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
attr = "^0.3.2"
pydantic = "^2.11.10"
python-dotenv = "^1.1.1"
requests = "^2.32.5"
attrs = "^25.3.0"
pytest = "^8.4.2"
typer = "^0.19.2"
typer-config = "^1.4.2"
pyyaml = "^6.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
